--- a/16_0123950_lexico/makefile
+++ b/16_0123950_lexico/makefile
@@ -1,5 +1,5 @@
 tradutor: src/lex.yy.c
-	gcc -o tradutor src/lex.yy.c -ll
+	gcc -g -o tradutor src/lex.yy.c -ll
 
 src/lex.yy.c: src/lexical_analyzer.l
 	flex -o src/lex.yy.c src/lexical_analyzer.l
