🎨 Connected flex output to bison input
This link is done through the '%union' section.

Its still necessary to refactor makefile and build the grammar

--- a/sintatico/makefile
+++ b/sintatico/makefile
@@ -1,9 +1,5 @@
-tradutor: src/lex.yy.c
-	gcc -g -W -o tradutor src/lex.yy.c -ll
 
-src/lex.yy.c: src/lexical_analyzer.l
-	flex -o src/lex.yy.c src/lexical_analyzer.l
-
-clean:
-	rm -rf *.o *~ tradutor src/lex.yy.c
-
+all:
+	bison -d src/parser.y
+	flex src/scanner.l
+	gcc -g parser.tab.c lex.yy.c -Wall -ll
