🚧 Adicionei flag para mostrar ambiguidade

--- a/sintatico/makefile
+++ b/sintatico/makefile
@@ -1,5 +1,5 @@
 
 all:
-	bison -d src/parser.y
+	bison -d src/parser.y -Wcounterexamples -Wother
 	flex src/scanner.l
 	gcc -g parser.tab.c lex.yy.c -Wall -ll
