--- a/sintatico/makefile
+++ b/sintatico/makefile
@@ -1,5 +1,4 @@
-
 all:
-	bison -d src/parser.y -Wcounterexamples -Wother
-	flex src/scanner.l
-	gcc -g parser.tab.c lex.yy.c -Wall -ll
+	bison -d parser.y
+	flex scanner.l
+	gcc -g parser.tab.c lex.yy.c symbol_table.c -Wall -ll
