💄 Arrumei print de tabela de simbolos

--- a/sintatico/makefile
+++ b/sintatico/makefile
@@ -1,4 +1,4 @@
 all:
 	bison -d parser.y
 	flex scanner.l
-	gcc -g parser.tab.c lex.yy.c symbol_table.c -Wall -ll
+	gcc -g -o tradutor parser.tab.c lex.yy.c symbol_table.c -Wall -ll
