--- a/sintatico/.vscode/settings.json
+++ b/sintatico/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "files.associations": {
         "symbol_table.h": "c",
-        "string.h": "c"
+        "string.h": "c",
+        "compare": "c",
+        "type_traits": "c"
     }
 }
